--- a/public/style.css
+++ b/public/style.css
@@ -25,8 +25,7 @@
 
 .alerts-bar {
   position: fixed;
-  top: 0;
-  padding: 5px 20%;
+  top: 10px;
   text-align: center;
   width: 100%;
   z-index: 1000;
